# wgpu-101

./: Cargo.toml  README.md  book.toml
.github/workflows/: rust.yml
code/1.getting_started/1.1.hello_window/: Cargo.toml
code/1.getting_started/ch01.01.hello_window/: Cargo.toml
code/1.getting_started/ch01.02.hello_web/: Cargo.toml  README.md  build-wasm.sh  index.html
code/1.getting_started/ch02.01.window_color/: Cargo.toml  index.html
code/1.getting_started/ch02.02.hello_triangle/: Cargo.toml  index.html
code/1.getting_started/ch02.02.hello_triangle/res/shaders/: triangle.wgsl
code/1.getting_started/ch02.02.hello_triangle/src/: init.rs  state.rs
code/1.getting_started/ch02.03.hello_buffer/: Cargo.toml  index.html
code/1.getting_started/ch02.03.vertex_buffer/: Cargo.toml  index.html
code/1.getting_started/ch02.04.index_buffer/: Cargo.toml  index.html
code/1.getting_started/ch03.01.point_list/: Cargo.toml  index.html
code/1.getting_started/ch03.01.point_list/res/shaders/: point_list.wgsl
code/1.getting_started/ch03.01.point_list/src/: init.rs  state.rs
code/1.getting_started/ch03.01.uniform/: Cargo.toml  index.html
code/1.getting_started/ch03.01.vertex_color/: Cargo.toml  index.html
code/1.getting_started/ch03.02.line_list/: Cargo.toml  index.html
code/1.getting_started/ch03.02.line_list/res/shaders/: line_list.wgsl
code/1.getting_started/ch03.02.line_list/src/: init.rs  lib.rs  state.rs
code/1.getting_started/ch03.02.more_properties/: Cargo.toml  index.html
code/1.getting_started/ch03.03.colorful_rect/: Cargo.toml  index.html
code/1.getting_started/ch03.03.triangle_list/: Cargo.toml  index.html
code/1.getting_started/ch03.03.triangle_list/res/shaders/: triangle_list.wgsl
code/1.getting_started/ch03.03.triangle_list/src/: init.rs  state.rs
code/1.getting_started/ch03.04.wireframe_mode/: Cargo.toml  index.html
code/1.getting_started/ch03.04.wireframe_mode/res/shaders/: triangle_list.wgsl
code/1.getting_started/ch03.04.wireframe_mode/src/: init.rs  state.rs
code/1.getting_started/ch04.01.use_texture/: Cargo.toml  Makefile  index.html
code/1.getting_started/ch04.01.use_texture/res/shaders/: triangle.wgsl
code/1.getting_started/ch04.01.use_texture/src/: init.rs  state.rs  texture.rs  vertex.rs
code/1.getting_started/ch04.01.vertex_buffer/: Cargo.toml  index.html
code/1.getting_started/ch04.01.vertex_buffer/src/: error.rs  state.rs
code/1.getting_started/ch04.02.index_buffer/: Cargo.toml  README.md  index.html
code/1.getting_started/ch04.02.use_egui/: Cargo.toml  index.html
code/1.getting_started/ch04.03.color_button/: Cargo.toml  index.html
code/1.getting_started/ch04.03.colorful_rect/: Cargo.toml  README.md  index.html
code/1.getting_started/ch05.01.uniform/: Cargo.toml  index.html
code/1.getting_started/ch05.01.use_egui/: Cargo.toml  index.html
code/1.getting_started/ch05.02.color_button/: Cargo.toml  index.html
code/1.getting_started/ch05.02.more_properties/: Cargo.toml  index.html
code/1.getting_started/ch05.03.uniform_alignment/: Cargo.toml  index.html
code/1.getting_started/ch05.03.uniform_alignment/res/shaders/: triangle.wgsl
code/1.getting_started/ch05.03.uniform_alignment/src/: state.rs  uniforms.rs
code/1.getting_started/ch06.01.use_texture/: Cargo.toml  index.html
code/1.getting_started/ch06.02.multiple_textures/: Cargo.toml  index.html
code/1.getting_started/ch06.03.fire_animation/: Cargo.toml  README.md  index.html
code/1.getting_started/ch06.03.flip_textures/: Cargo.toml  index.html
code/1.getting_started/ch06.03.flip_textures/res/shaders/: texture.wgsl
code/1.getting_started/ch06.03.flip_textures/src/: init.rs  state.rs  texture.rs
code/1.getting_started/ch06.04.fire_animation/: Cargo.toml  index.html
code/1.getting_started/ch06.04.fire_animation/src/: init.rs  lib.rs  state.rs  texture.rs  vertex.rs
code/1.getting_started/ch07.01.use_egui/: Cargo.toml  index.html
code/1.getting_started/ch07.01.use_egui/res/shaders/: triangle.wgsl
code/1.getting_started/ch07.01.use_egui/src/: init.rs  state.rs  uniforms.rs
code/1.getting_started/ch07.02.color_button/: Cargo.toml  README.md  index.html
code/1.getting_started/ch07.02.color_button/src/: frames.rs  init.rs  lib.rs  state.rs  uniforms.rs
code/1.getting_started/ch07.03.show_fps/: Cargo.toml  index.html
code/1.getting_started/ch07.03.show_fps/res/shaders/: triangle.wgsl
code/1.getting_started/ch07.03.show_fps/src/: frames.rs  init.rs  lib.rs  state.rs  uniforms.rs
code/1.getting_started/ch09.02.depth_buffer/: Cargo.toml  index.html
code/1.getting_started/ch09.02.depth_buffer/res/shaders/: coordinate.wgsl
code/1.getting_started/ch09.02.depth_buffer/src/: init.rs  lib.rs  state.rs  texture.rs  vertex.rs
code/2.lighting/ch01.02.change_light/: Cargo.toml  index.html
code/2.lighting/ch01.02.change_light/src/: box_scene.rs  frames.rs  init.rs  state.rs
code/2.lighting/ch02.01.ambient/: Cargo.toml  index.html
code/2.lighting/ch02.01.ambient/res/shaders/: box.wgsl
code/2.lighting/ch02.01.ambient/src/: init.rs  state.rs  texture.rs  vertex.rs
code/2.lighting/ch03.02.material_animation/: Cargo.toml  index.html
code/2.lighting/ch03.02.material_animation/res/shaders/: box.wgsl
code/2.lighting/ch03.02.material_animation/src/: init.rs  state.rs
code/2.lighting/ch04.01.diffuse_map/: Cargo.toml  index.html
code/2.lighting/ch04.01.diffuse_map/res/shaders/: box.wgsl
code/2.lighting/ch04.01.diffuse_map/src/: box_scene.rs  frames.rs  init.rs  light.rs  state.rs
code/2.lighting/ch05.01.directional_light/: Cargo.toml  index.html
code/2.lighting/ch05.01.directional_light/src/: geometry.rs  init.rs  light.rs  state.rs
docs/: README.md  SUMMARY.md
docs/01.getting_started/: 01.hello_window.md  02.hello_triangle.md  05.uniforms.md  09.3d_shapes.md
docs/02.lighting/: 09.basic_lighting.md  lighting_casters.md  lighting_maps.md  multiple_lights.md
docs/03.model_loading/: README.md
docs/04.advanced_wgpu/: README.md
scripts/: build-docs.sh  pre-commit  run-lint.sh
(+184 files in other folders)
