[package]
name = "ch02_02_hello_triangle"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch02_02_hello_triangle"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.20"
pollster = "0.3.0"
thiserror = "1.0.50"
winit = "0.28.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.1"
wgpu = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.17.2", features = ["webgl"] }
