[package]
name = "ch03_02_line_list"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch03_02_line_list"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.21"
pollster = "0.3.0"
thiserror = "1.0.58"
winit = "0.28.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.2"
wgpu = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.17.2", features = ["webgl"] }
