[package]
name = "ch03_04_wireframe_mode"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch03_04_wireframe_mode"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
pollster = "0.3.0"
thiserror = "1.0.40"
winit = "0.28.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
wgpu = "0.16.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.63", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.16.1", features = ["webgl"] }
