[package]
name = "ch04_01_use_texture"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch04_01_use_texture"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.0", features = ["derive"] }
cfg-if = "1.0.0"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
log = "0.4.17"
pollster = "0.3.0"
thiserror = "1.0.38"
winit = "0.28.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
wgpu = "0.15.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.15.1", features = ["webgl"] }
