[package]
name = "ch05_03_uniform_alignment"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch05_03_uniform_alignment"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
log = "0.4.21"
pollster = "0.3.0"
thiserror = "1.0.60"
winit = "0.28.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.2"
instant = "0.1"
wgpu = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.17.2", features = ["webgl"] }
