[package]
name = "ch06_03_flip_textures"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch06_03_flip_textures"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cfg-if = "1.0.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
log = "0.4.27"
pollster = "0.4.0"
thiserror = "2.0.12"
winit = "0.30.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
wgpu = "25.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "25.0.0", features = ["webgl"] }
