[package]
name = "ch07_01_use_egui"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch07_01_use_egui"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = { version = "0.22.0", features = ["bytemuck"] }
egui_demo_lib = "0.22.0"
egui_winit_platform = "0.19.0"
epi = "0.17.0"
log = "0.4.21"
pollster = "0.3.0"
thiserror = "1.0.58"
winit = "0.28.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_wgpu_backend = "0.25.0"
env_logger = "0.10.2"
instant = "0.1"
wgpu = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_wgpu_backend = { version = "0.25.0", features = ["web"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.17.2", features = ["webgl"] }
