[package]
name = "ch07_02_color_button"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p1_getting_started_ch07_02_color_button"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = { version = "0.21.0", features = ["bytemuck"] }
egui_winit_platform = "0.18.0"
epi = "0.17.0"
log = "0.4.19"
pollster = "0.3.0"
thiserror = "1.0.40"
winit = "0.28.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_wgpu_backend = "0.23.0"
env_logger = "0.10.0"
instant = "0.1"
wgpu = "0.16.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_wgpu_backend = { version = "0.23.0", features = ["web"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.16.1", features = ["webgl"] }
