[package]
name = "ch03_02_material_animation"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p2_lighting_ch03_02_material_animation"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = { version = "0.22.0", features = ["bytemuck"] }
egui_winit_platform = "0.19.0"
epi = "0.17.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
log = "0.4.20"
pollster = "0.3.0"
thiserror = "1.0.44"
winit = "0.28.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_wgpu_backend = "0.25.0"
instant = "0.1.12"
env_logger = "0.10.0"
wgpu = "0.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_wgpu_backend = { version = "0.25.0", features = ["web"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "0.17.0", features = ["webgl"] }
