[package]
name = "ch04_01_diffuse_map"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "p2_lighting_ch04_01_diffuse_map"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = { version = "0.31.1", features = ["bytemuck"] }
egui_winit_platform = "0.26.0"
epi = "0.17.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
log = "0.4.27"
pollster = "0.4.0"
thiserror = "2.0.12"
winit = "0.30.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_wgpu_backend = "0.34.0"
instant = "0.1.13"
env_logger = "0.11.8"
wgpu = "25.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_wgpu_backend = { version = "0.34.0", features = ["web"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wgpu = { version = "25.0.0", features = ["webgl"] }
